-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
Environment:
Seen on 32-bit x86 Linux.
-
b60
-
x86
-
linux
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8029221 | 8 | Albert Noll | P2 | Closed | Fixed | b118 |
[2013-11-09T10:25:04.27] CodeCache: size=32768Kb used=32126Kb max_used=32126Kb free=641Kb
[2013-11-09T10:25:04.27] Java HotSpot(TM) Client VM warning: CodeCache is full. Compiler has been disabled.
[2013-11-09T10:25:04.27] bounds [0xf459f000, 0xf659f000, 0xf659f000]
[2013-11-09T10:25:04.27] total_blobs=2506 nmethods=2360 adapters=86
[2013-11-09T10:25:04.27] Java HotSpot(TM) Client VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=
[2013-11-09T10:25:04.27] compilation: disabled (not enough contiguous free space left)
[2013-11-09T10:25:04.27] # To suppress the following error report, specify this argument
[2013-11-09T10:25:04.27] # after -XX: or in .hotspotrc: SuppressErrorAt=/thread.cpp:914
[2013-11-09T10:25:04.27] #
[2013-11-09T10:25:04.27] # A fatal error has been detected by the Java Runtime Environment:
[2013-11-09T10:25:04.27] #
[2013-11-09T10:25:04.27] # Internal Error (/opt/jprt/T/P1/221711.drchase/s/src/share/vm/runtime/thread.cpp:914), pid=17191, tid=3952081776
[2013-11-09T10:25:04.27] # fatal error: Possible safepoint reached by thread that does not allow it
[2013-11-09T10:25:04.27] Java HotSpot(TM) Client VM warning: CodeCache is full. Compiler has been disabled.
[2013-11-09T10:25:04.27] bounds [0xf459f000, 0xf659f000, 0xf659f000]
[2013-11-09T10:25:04.27] total_blobs=2506 nmethods=2360 adapters=86
[2013-11-09T10:25:04.27] Java HotSpot(TM) Client VM warning: Try increasing the code cache size using -XX:ReservedCodeCacheSize=
[2013-11-09T10:25:04.27] compilation: disabled (not enough contiguous free space left)
[2013-11-09T10:25:04.27] # To suppress the following error report, specify this argument
[2013-11-09T10:25:04.27] # after -XX: or in .hotspotrc: SuppressErrorAt=/thread.cpp:914
[2013-11-09T10:25:04.27] #
[2013-11-09T10:25:04.27] # A fatal error has been detected by the Java Runtime Environment:
[2013-11-09T10:25:04.27] #
[2013-11-09T10:25:04.27] # Internal Error (/opt/jprt/T/P1/221711.drchase/s/src/share/vm/runtime/thread.cpp:914), pid=17191, tid=3952081776
[2013-11-09T10:25:04.27] # fatal error: Possible safepoint reached by thread that does not allow it
- backported by
-
JDK-8029221 nsk stress tests, CodeCache fills, then safepoint asserts
-
- Closed
-
- relates to
-
JDK-8023037 Race between ciEnv::register_method and nmethod::make_not_entrant_or_zombie
-
- Resolved
-