8028306: nsk stress tests, CodeCache fills, then safepoint asserts

Move handle_full_code_cache() out of block that forbids safepoints

Reviewed-by: kvn, iveresov